@@ -1,6 +1,10 @@
 git-annex (0.24) UNRELEASED; urgency=low
 
   * Add Suggests on graphviz. Closes: #618039
+  * When adding files to the annex, the symlinks pointing at the annexed
+    content are made to have the same mtime as the original file.
+    While git does not preserve that information, this allows a tool
+    like metastore to be used with annexed files.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 13 Mar 2011 14:25:17 -0400
 
